--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -110,10 +110,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Installing libraries to the environment**"
+      ],
+      "metadata": {
+        "id": "pRA3-h12e-se"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@title Installing libraries to the environment (Double click to see)\n",
-        "\n",
         "!pip install -U transformers &> /dev/null\n",
         "!pip install -U accelerate &> /dev/null\n",
         "!pip install -U datasets &> /dev/null\n",
@@ -124,11 +131,19 @@
         "!pip install py7zr &> /dev/null"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "-2NcRvOtzVIw"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Importing Libraries**"
+      ],
+      "metadata": {
+        "id": "CeOX2XtMfEsE"
+      }
     },
     {
       "cell_type": "code",
@@ -150,7 +165,6 @@
         }
       ],
       "source": [
-        "#@title Importing Libraries (Double click to see)\n",
         "from __future__ import unicode_literals, print_function, division\n",
         "from collections import Counter\n",
         "from gensim.models import KeyedVectors\n",
@@ -193,7 +207,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Exploring Data"
+        "## Exploring Data\n",
+        "### Basic Descriptive Statistics"
       ],
       "metadata": {
         "id": "X4SjEe06WyMI"
@@ -202,8 +217,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Basic Descriptive Statistics\n",
-        "\n",
         "# Load the training data\n",
         "train_df = pd.read_json('/content/drive/My Drive/COMP9444/data/raw/dialogsum/dialogsum.train.jsonl',\n",
         "                        lines=True)[['dialogue', 'summary']]\n",
@@ -234,7 +247,6 @@
           "base_uri": "https://localhost:8080/",
           "height": 368
         },
-        "cellView": "form",
         "id": "B55endvBRzsC",
         "outputId": "1967b8e2-d6f4-4652-8541-d5579da08068"
       },
@@ -341,9 +353,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Plotting Descriptive Statistics"
+      ],
+      "metadata": {
+        "id": "GUS9nY9jfUiG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@title Plot\n",
         "# Calculate quantiles\n",
         "quantiles_dialogue_train = train_df['Dialogue Length'].quantile([0.25, 0.5, 0.75])\n",
         "quantiles_summary_train = train_df['Summary Length'].quantile([0.25, 0.5, 0.75])\n",
@@ -393,7 +413,6 @@
         "plt.show()"
       ],
       "metadata": {
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -416,10 +435,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**COMMENTS**\n",
+        "\n",
+        "### Most Common Words"
+      ],
+      "metadata": {
+        "id": "RRAZgZSefdoL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@title Most Common Words\n",
-        "\n",
         "word_counts_train = Counter(\" \".join(train_df['dialogue']).split())\n",
         "most_common_words_train = word_counts_train.most_common(10)\n",
         "words_train, counts_train = zip(*most_common_words_train)\n",
@@ -457,7 +485,6 @@
           "base_uri": "https://localhost:8080/",
           "height": 564
         },
-        "cellView": "form",
         "id": "ldDP7CXoXD1Q",
         "outputId": "cd651df7-508f-4883-a88c-77df5f94aee1"
       },
@@ -476,10 +503,99 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**COMMENTS**\n",
+        "\n",
+        "### Uni-gram Overlap"
+      ],
+      "metadata": {
+        "id": "8ZRPp76-f7Zc"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@title Most Common Bi-grams\n",
+        "def unigram_overlap(row):\n",
+        "    dialogue_words = set(row['dialogue'].split())\n",
+        "    summary_words = set(row['summary'].split())\n",
+        "    overlap = summary_words.intersection(dialogue_words)\n",
+        "    return len(overlap) / len(summary_words) * 100 if summary_words else 0\n",
         "\n",
+        "# Apply the function and calculate average for train_df\n",
+        "train_df['unigram_overlap'] = train_df.apply(unigram_overlap, axis=1)\n",
+        "avg_overlap_train = train_df['unigram_overlap'].mean()\n",
+        "\n",
+        "# Apply the function and calculate average for dev_df\n",
+        "dev_df['unigram_overlap'] = dev_df.apply(unigram_overlap, axis=1)\n",
+        "avg_overlap_dev = dev_df['unigram_overlap'].mean()\n",
+        "\n",
+        "# Create a styled DataFrame for display\n",
+        "results_df = pd.DataFrame({\n",
+        "    \"Dataset\": [\"Training Set\", \"Development Set\"],\n",
+        "    \"Average Unigram Overlap (%)\": [avg_overlap_train, avg_overlap_dev]\n",
+        "}).style.hide(axis=\"index\")\n",
+        "\n",
+        "# Display the styled DataFrame\n",
+        "display(results_df)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 111
+        },
+        "id": "JFvXIQfuR1ZT",
+        "outputId": "b9ad67d3-5259-4c6e-8167-479cb54229b7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<pandas.io.formats.style.Styler at 0x7951d0d1abc0>"
+            ],
+            "text/html": [
+              "<style type=\"text/css\">\n",
+              "</style>\n",
+              "<table id=\"T_98beb\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th id=\"T_98beb_level0_col0\" class=\"col_heading level0 col0\" >Dataset</th>\n",
+              "      <th id=\"T_98beb_level0_col1\" class=\"col_heading level0 col1\" >Average Unigram Overlap (%)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td id=\"T_98beb_row0_col0\" class=\"data row0 col0\" >Training Set</td>\n",
+              "      <td id=\"T_98beb_row0_col1\" class=\"data row0 col1\" >48.060675</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td id=\"T_98beb_row1_col0\" class=\"data row1 col0\" >Development Set</td>\n",
+              "      <td id=\"T_98beb_row1_col1\" class=\"data row1 col1\" >45.961782</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**COMMENTS**\n",
+        "\n",
+        "### Most Common Bi-grams"
+      ],
+      "metadata": {
+        "id": "9GyX5GmWftQO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def get_top_ngrams(corpus, n=None, ngram=2):\n",
         "    vec = CountVectorizer(ngram_range=(ngram, ngram), stop_words='english').fit(corpus)\n",
         "    bag_of_words = vec.transform(corpus)\n",
@@ -524,7 +640,6 @@
           "base_uri": "https://localhost:8080/",
           "height": 566
         },
-        "cellView": "form",
         "id": "4ALSxE1iOPB9",
         "outputId": "ee584bff-715e-46f6-96ba-9d7ca562e690"
       },
@@ -543,171 +658,90 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "dev_df = pd.read_json('/content/drive/My Drive/COMP9444/data/raw/dialogsum/dialogsum.dev.jsonl',\n",
-        "                      lines=True)[['dialogue', 'summary']]\n",
+        "## Methods\n",
         "\n",
-        "dev_df['Dialogue Length'] = dev_df['dialogue'].apply(lambda x: len(x.split()))\n",
-        "dev_df['Summary Length'] = dev_df['summary'].apply(lambda x: len(x.split()))\n",
+        "### BART\n",
         "\n",
-        "basic_stats = dev_df[['Dialogue Length', 'Summary Length']].describe()\n",
-        "formatted_stats = basic_stats.style.set_table_styles(\n",
-        "    [{'selector': 'th', 'props': [('font-size', '12pt')]}]\n",
-        ")\n",
-        "\n",
-        "formatted_stats"
+        "#### Pretrained"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 333
-        },
-        "id": "2olOC_sgW8F1",
-        "outputId": "4ccec203-dfac-4d77-bcc1-bf404f8ae36f"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<pandas.io.formats.style.Styler at 0x7951c71d9ed0>"
-            ],
-            "text/html": [
-              "<style type=\"text/css\">\n",
-              "#T_9bd69 th {\n",
-              "  font-size: 12pt;\n",
-              "}\n",
-              "</style>\n",
-              "<table id=\"T_9bd69\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr>\n",
-              "      <th class=\"blank level0\" >&nbsp;</th>\n",
-              "      <th id=\"T_9bd69_level0_col0\" class=\"col_heading level0 col0\" >Dialogue Length</th>\n",
-              "      <th id=\"T_9bd69_level0_col1\" class=\"col_heading level0 col1\" >Summary Length</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th id=\"T_9bd69_level0_row0\" class=\"row_heading level0 row0\" >count</th>\n",
-              "      <td id=\"T_9bd69_row0_col0\" class=\"data row0 col0\" >500.000000</td>\n",
-              "      <td id=\"T_9bd69_row0_col1\" class=\"data row0 col1\" >500.000000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th id=\"T_9bd69_level0_row1\" class=\"row_heading level0 row1\" >mean</th>\n",
-              "      <td id=\"T_9bd69_row1_col0\" class=\"data row1 col0\" >129.340000</td>\n",
-              "      <td id=\"T_9bd69_row1_col1\" class=\"data row1 col1\" >20.914000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th id=\"T_9bd69_level0_row2\" class=\"row_heading level0 row2\" >std</th>\n",
-              "      <td id=\"T_9bd69_row2_col0\" class=\"data row2 col0\" >66.144316</td>\n",
-              "      <td id=\"T_9bd69_row2_col1\" class=\"data row2 col1\" >9.769826</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th id=\"T_9bd69_level0_row3\" class=\"row_heading level0 row3\" >min</th>\n",
-              "      <td id=\"T_9bd69_row3_col0\" class=\"data row3 col0\" >40.000000</td>\n",
-              "      <td id=\"T_9bd69_row3_col1\" class=\"data row3 col1\" >6.000000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th id=\"T_9bd69_level0_row4\" class=\"row_heading level0 row4\" >25%</th>\n",
-              "      <td id=\"T_9bd69_row4_col0\" class=\"data row4 col0\" >85.000000</td>\n",
-              "      <td id=\"T_9bd69_row4_col1\" class=\"data row4 col1\" >14.000000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th id=\"T_9bd69_level0_row5\" class=\"row_heading level0 row5\" >50%</th>\n",
-              "      <td id=\"T_9bd69_row5_col0\" class=\"data row5 col0\" >115.000000</td>\n",
-              "      <td id=\"T_9bd69_row5_col1\" class=\"data row5 col1\" >18.000000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th id=\"T_9bd69_level0_row6\" class=\"row_heading level0 row6\" >75%</th>\n",
-              "      <td id=\"T_9bd69_row6_col0\" class=\"data row6 col0\" >161.000000</td>\n",
-              "      <td id=\"T_9bd69_row6_col1\" class=\"data row6 col1\" >26.000000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th id=\"T_9bd69_level0_row7\" class=\"row_heading level0 row7\" >max</th>\n",
-              "      <td id=\"T_9bd69_row7_col0\" class=\"data row7 col0\" >472.000000</td>\n",
-              "      <td id=\"T_9bd69_row7_col1\" class=\"data row7 col1\" >65.000000</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 52
-        }
-      ]
+        "id": "skR2qCcXfySt"
+      }
     },
     {
       "cell_type": "code",
-      "source": [
-        "#@title Uni-gram Overlap\n",
-        "def unigram_overlap(row):\n",
-        "    dialogue_words = set(row['dialogue'].split())\n",
-        "    summary_words = set(row['summary'].split())\n",
-        "    overlap = summary_words.intersection(dialogue_words)\n",
-        "    return len(overlap) / len(summary_words) * 100 if summary_words else 0\n",
-        "\n",
-        "# Apply the function and calculate average for train_df\n",
-        "train_df['unigram_overlap'] = train_df.apply(unigram_overlap, axis=1)\n",
-        "avg_overlap_train = train_df['unigram_overlap'].mean()\n",
-        "\n",
-        "# Apply the function and calculate average for dev_df\n",
-        "dev_df['unigram_overlap'] = dev_df.apply(unigram_overlap, axis=1)\n",
-        "avg_overlap_dev = dev_df['unigram_overlap'].mean()\n",
-        "\n",
-        "# Create a styled DataFrame for display\n",
-        "results_df = pd.DataFrame({\n",
-        "    \"Dataset\": [\"Training Set\", \"Development Set\"],\n",
-        "    \"Average Unigram Overlap (%)\": [avg_overlap_train, avg_overlap_dev]\n",
-        "}).style.hide(axis=\"index\")\n",
-        "\n",
-        "# Display the styled DataFrame\n",
-        "display(results_df)"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 111
-        },
-        "cellView": "form",
-        "id": "JFvXIQfuR1ZT",
-        "outputId": "b9ad67d3-5259-4c6e-8167-479cb54229b7"
+        "id": "tOMWcEclgdfy"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<pandas.io.formats.style.Styler at 0x7951d0d1abc0>"
-            ],
-            "text/html": [
-              "<style type=\"text/css\">\n",
-              "</style>\n",
-              "<table id=\"T_98beb\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr>\n",
-              "      <th id=\"T_98beb_level0_col0\" class=\"col_heading level0 col0\" >Dataset</th>\n",
-              "      <th id=\"T_98beb_level0_col1\" class=\"col_heading level0 col1\" >Average Unigram Overlap (%)</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <td id=\"T_98beb_row0_col0\" class=\"data row0 col0\" >Training Set</td>\n",
-              "      <td id=\"T_98beb_row0_col1\" class=\"data row0 col1\" >48.060675</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <td id=\"T_98beb_row1_col0\" class=\"data row1 col0\" >Development Set</td>\n",
-              "      <td id=\"T_98beb_row1_col1\" class=\"data row1 col1\" >45.961782</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "####Finetuned"
+      ],
+      "metadata": {
+        "id": "SFIlOYItgRQM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Gul_TN2xgfpq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### FLAN-T5\n",
+        "#### Pretrained"
+      ],
+      "metadata": {
+        "id": "wkyzAHVPgVim"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "i3F2N2iPgegv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Finetuned"
+      ],
+      "metadata": {
+        "id": "SV9y8XaRgZdJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xt0Wh19EgfC6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Custom Seq2Seq Model"
+      ],
+      "metadata": {
+        "id": "8KflMGb_gJ-2"
+      }
     },
     {
       "cell_type": "code",
@@ -1547,6 +1581,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "machine_shape": "hm",
       "include_colab_link": true
     },
     "kernelspec": {
