--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -149,25 +149,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "DWemnrRfBIXo",
-        "outputId": "1e5a9c92-8e92-4ff6-94e0-1b8c998ec577",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "DWemnrRfBIXo"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from __future__ import unicode_literals, print_function, division\n",
         "from collections import Counter\n",
         "from gensim.models import KeyedVectors\n",
+        "import nltk\n",
+        "nltk.download('punkt')\n",
         "from nltk.tokenize import WordPunctTokenizer\n",
         "from nltk.util import ngrams\n",
         "from nltk import FreqDist\n",
@@ -180,10 +170,12 @@
         "import torch.nn.functional as F\n",
         "import json\n",
         "from google.colab import drive\n",
-        "from tqdm.notebook import tqdm\n",
+        "from tqdm.auto import tqdm\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "from IPython.display import display, HTML\n",
         "\n",
+        "from datasets import load_dataset, load_metric\n",
+        "from transformers import Trainer, TrainerArguments\n",
         "\n",
         "from io import open\n",
         "\n",
@@ -661,13 +653,115 @@
       "cell_type": "markdown",
       "source": [
         "## Methods\n",
+        "**WHATS BEEN DONE**\n",
         "\n",
-        "### BART\n",
-        "\n",
-        "#### Pretrained"
+        "**Helper functions**"
       ],
       "metadata": {
         "id": "skR2qCcXfySt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_feature(batch, tokenizer):\n",
+        "  encodings = tokenizer(batch['dialogue'], text_target=batch['summary'],\n",
+        "                        max_length=1024, truncation=True)\n",
+        "\n",
+        "  encodings = {'input_ids': encodings['input_ids'],\n",
+        "               'attention_mask': encodings['attention_mask'],\n",
+        "               'labels': encodings['labels']}\n",
+        "\n",
+        "  return encodings\n",
+        "\n",
+        "def generate_summaries(texts, model, tokenizer, device, progress = True):\n",
+        "    model.eval()\n",
+        "    summaries = []\n",
+        "    if progress:\n",
+        "        iterator = tqdm(texts)\n",
+        "    else:\n",
+        "        iterator = texts\n",
+        "    for text in iterator:\n",
+        "        with torch.no_grad():\n",
+        "            inputs = tokenizer(text, return_tensors=\"pt\", max_length=1024, truncation=True).to(device)\n",
+        "            summary_ids = model.generate(inputs['input_ids'], attention_mask=inputs['attention_mask'])\n",
+        "            summary = tokenizer.decode(summary_ids[0], skip_special_tokens=True)\n",
+        "            summaries.append(summary)\n",
+        "\n",
+        "    return summaries\n",
+        "\n",
+        "def generate_metrics(references, summaries):\n",
+        "    total_rouge_scores = {key: 0 for key in ['rouge1', 'rouge2', 'rougeL', 'rougeLsum']}\n",
+        "    total_bleu_score = 0\n",
+        "\n",
+        "    for reference, summary in tqdm(zip(references, summaries), total=len(dialogues)):\n",
+        "\n",
+        "        # Calculate ROUGE scores\n",
+        "        rouge_score = rouge_metric.compute(predictions=[summary], references=[reference])\n",
+        "\n",
+        "        # Aggregate ROUGE scores\n",
+        "        for key in total_rouge_scores.keys():\n",
+        "            total_rouge_scores[key] += rouge_score[key].mid.fmeasure\n",
+        "\n",
+        "        # Calculate BLEU score\n",
+        "        bleu_score = sentence_bleu([nltk.word_tokenize(reference)], nltk.word_tokenize(summary))\n",
+        "        total_bleu_score += bleu_score\n",
+        "\n",
+        "    # Average the scores\n",
+        "    scores = {}\n",
+        "    for k, v in total_rouge_scores.items():\n",
+        "        scores[k] = scores.get(k, 0) + v/len(test_dialogues)\n",
+        "\n",
+        "    avg_bleu_score = total_bleu_score / len(test_dialogues)\n",
+        "    scores = list(scores.values)\n",
+        "    scores.append(avg_bleu_score)\n",
+        "    return scores\n",
+        "\n",
+        "\n",
+        "def print_summaries(model_1, model_2, token_1, token_2, indices, device, hidden=True):\n",
+        "    for i, idx in enumerate(indices):\n",
+        "        print(f'[DIALOGUE #{i+1}]')\n",
+        "        print('--------------------')\n",
+        "\n",
+        "        if hidden:\n",
+        "            print('[SUMMARY A]')\n",
+        "            print(generate_summaries(hidden_dialogues[idx], model_1, token_1, device, False))\n",
+        "            print('--------------------')\n",
+        "\n",
+        "            print('[SUMMARY B]')\n",
+        "            print(generate_summaries(hidden_dialogues[idx], model_2, token_2, device, False))\n",
+        "        else:\n",
+        "\n",
+        "            print('[ORIGINAL SUMMARY]')\n",
+        "            print(generate_summaries(references[idx], model_1, token_1, device, False))\n",
+        "            print('--------------------')\n",
+        "\n",
+        "\n",
+        "            print('[SUMMARY A]')\n",
+        "            print(generate_summaries(test_dialogues[idx], model_1, token_1, device, False))\n",
+        "            print('--------------------')\n",
+        "\n",
+        "            print('[SUMMARY B]')\n",
+        "            print(generate_summaries(test_dialogues[idx], model_2, token_2, device, False))\n",
+        "        print('####################')\n"
+      ],
+      "metadata": {
+        "id": "6GQHfMVEiMdW"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### BART\n",
+        "**WHAT IS BART**\n",
+        "**WHY CHOOSE THIS**\n",
+        "#### Pretrained\n",
+        "**HOW HAS IT BEEN PRETRAINED**"
+      ],
+      "metadata": {
+        "id": "CdiYFnUZiMz-"
       }
     },
     {
