--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -37,31 +37,31 @@
       "source": [
         "## Table of Contents\n",
         "\n",
-        "1. [Introduction](##Introduction)\n",
-        "    - [Motivation](###Motivation)\n",
-        "    - [Problem Statement](###Problem-Statement)\n",
-        "2. [Data Sources](##DataSources)\n",
-        "3. [Methodology](#Methodology)\n",
-        "    - [Dataset Description](#Dataset-Description)\n",
-        "    - [Model Architecture](#Model-Architecture)\n",
-        "        - [Seq2Seq Transformer](#Seq2Seq-Transformer)\n",
-        "        - [BART](#BART)\n",
-        "        - [T5](#T5)\n",
-        "    - [Training Approach](#Training-Approach)\n",
-        "4. [Experiment and Results](#Experiment-and-Results)\n",
-        "    - [Experimental Setup](#Experimental-Setup)\n",
-        "    - [Performance Metrics](#Performance-Metrics)\n",
-        "    - [Results Analysis](#Results-Analysis)\n",
-        "5. [Discussion](#Discussion)\n",
-        "    - [Model Comparison](#Model-Comparison)\n",
-        "    - [Implications](#Implications)\n",
-        "6. [Conclusion](#Conclusion)\n",
-        "    - [Summary of Findings](#Summary-of-Findings)\n",
-        "    - [Future Work](#Future-Work)\n",
-        "7. [References](#References)\n",
-        "8. [Appendix](#Appendix)\n",
-        "    - [Code](#Code)\n",
-        "    - [Additional Data](#Additional-Data)"
+        "1. Introduction\n",
+        "    - Problem Statement\n",
+        "    - Motivation\n",
+        "2. Data Sources\n",
+        "3. Exploring Data\n",
+        "4. Methodology\n",
+        "    - Custom Encoder-Decoder\n",
+        "        - Custom Lite\n",
+        "        - Custom Final\n",
+        "    - FLAN-T5\n",
+        "        - Pretrained\n",
+        "        - Finetuned\n",
+        "    - BART\n",
+        "        - Pretrained\n",
+        "        - Finetuned\n",
+        "5. Experiment and Results\n",
+        "    - Experimental Setup\n",
+        "    - Performance Metrics\n",
+        "    - Results Analysis\n",
+        "6. Discussion\n",
+        "    - Model Comparison\n",
+        "    - Implications\n",
+        "7. Conclusion\n",
+        "    - Summary of Findings\n",
+        "    - Future Work"
       ],
       "metadata": {
         "id": "Uh986XWsYtOE"
@@ -70,9 +70,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Introduction\n",
+        "## Introduction<a class=\"anchor\" id=\"intro\"></a>\n",
         "\n",
-        "This project aims to conduct a comprehensive comparative analysis of different approaches to dialog summarization, focusing on the effectiveness of a static embedding-based Seq2Seq Transformer model against more complex transformer architectures, such as BART and T5.\n",
+        "This project aims to conduct a comprehensive comparative analysis of different approaches to dialog summarization, focusing on the effectiveness of a static embedding-based Seq2Seq Encoder-Decoder model against more complex transformer architectures, such as BART and T5.\n",
         "\n",
         "### Problem Statement:\n",
         "Dialog summarization is an essential aspect of Natural Language Processing (NLP), aimed at condensing conversations or dialogues into concise summaries without losing the context or essential information. The challenge lies in accurately capturing the nuances and key points of dialogues, which can be complex and multi-threaded. This project seeks to understand and evaluate how different model architectures - particularly, a simpler Seq2Seq Transformer with static embeddings versus more advanced and dynamic models like BART (Bidirectional and Auto-Regressive Transformers) and T5 (Text-to-Text Transfer Transformer) - perform in the task of dialog summarization.\n",
@@ -115,7 +115,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Installing libraries to the environment**"
+        "**Setting Environment**"
       ],
       "metadata": {
         "id": "pRA3-h12e-se"
@@ -124,6 +124,12 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install -U numpy matplotlib seaborn scikit-learn &> /dev/null\n",
+        "!pip install -U seaborn &> /dev/null\n",
+        "!pip install -U pandas &> /dev/null\n",
+        "!pip install -U torch &> /dev/null\n",
+        "!pip install -U gensim &> /dev/null\n",
+        "!pip install -U nltk &> /dev/null\n",
         "!pip install -U transformers &> /dev/null\n",
         "!pip install -U accelerate &> /dev/null\n",
         "!pip install -U datasets &> /dev/null\n",
@@ -137,7 +143,7 @@
       "metadata": {
         "id": "-2NcRvOtzVIw"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -151,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "DWemnrRfBIXo",
         "outputId": "6003bfbb-6560-41d4-b056-b0ac1a9169ae",
@@ -268,7 +274,7 @@
         "id": "B55endvBRzsC",
         "outputId": "6288f387-ffb0-4a18-b163-a546d11ac750"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,7 +444,7 @@
         "id": "jhlRB_KWZKUg",
         "outputId": "4e6b4183-f9f8-4c25-8d07-5458dbdc6fec"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -506,7 +512,7 @@
         "id": "ldDP7CXoXD1Q",
         "outputId": "a384527b-e29c-47b5-fc99-9b6b34c7a0e5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -565,7 +571,7 @@
         "id": "JFvXIQfuR1ZT",
         "outputId": "d3d26066-c67b-423c-b16c-70b83c263e87"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -661,7 +667,7 @@
         "id": "4ALSxE1iOPB9",
         "outputId": "c7f3bc55-621b-4a9f-9c7f-22421fd18c08"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -698,13 +704,13 @@
       "metadata": {
         "id": "CSJBDhLTxPMl"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Methods\n",
+        "## Methodology <a class=\"anchor\" id=\"method\"></a>\n",
         "**WHATS BEEN DONE**\n",
         "\n",
         "**Helper functions**"
@@ -805,7 +811,7 @@
       "metadata": {
         "id": "6GQHfMVEiMdW"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -910,7 +916,7 @@
       "metadata": {
         "id": "vBJLFLCayQus"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -924,7 +930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "RUdVDa01BIXr"
       },
@@ -988,7 +994,7 @@
       "metadata": {
         "id": "_oWilyeEy_Zm"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1002,7 +1008,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "6O_O1498B59n"
       },
@@ -1147,7 +1153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "CWewwreCvx1b"
       },
@@ -1211,7 +1217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "uP7le4_lEom5"
       },
@@ -1319,7 +1325,7 @@
       "metadata": {
         "id": "4rcrj3A0KCQU"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1331,7 +1337,7 @@
       "metadata": {
         "id": "8Uwa3nJ5KX_U"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1496,7 +1502,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1520,7 +1526,7 @@
       "metadata": {
         "id": "WzW00fd2KVFz"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1561,7 +1567,7 @@
         "id": "x7LObxNiRUmY",
         "outputId": "15e73738-d6f8-447f-9f97-f763f8f69363"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1638,7 +1644,7 @@
       "metadata": {
         "id": "rLNI6ftqLLDM"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1806,7 +1812,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1849,7 +1855,7 @@
         },
         "outputId": "f1699c92-5c13-45c6-80bd-f91e8a5add8c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1883,7 +1889,7 @@
         "id": "RGKFtyfVX0wV",
         "outputId": "e4929f23-07c7-4d9c-8a5c-bb3cf7fa75b4"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2248,7 +2254,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model_ckpt = 'google/flan-t5-small'\n",
+        "flan_ckpt = 'google/flan-t5-small'\n",
         "flan_tokenizer = AutoTokenizer.from_pretrained(model_ckpt)\n",
         "flan_model = AutoModelForSeq2SeqLM.from_pretrained(model_ckpt)\n",
         "save_ckpt = '/content/drive/My Drive/COMP9444/models/FLAN_T5/'"
@@ -2841,8 +2847,8 @@
     {
       "cell_type": "code",
       "source": [
-        "flan_tokenizer = AutoTokenizer.from_pretrained(model_ckpt)\n",
-        "flan_model = AutoModelForSeq2SeqLM.from_pretrained(model_ckpt)"
+        "flan_tokenizer = AutoTokenizer.from_pretrained(flan_ckpt)\n",
+        "flan_model = AutoModelForSeq2SeqLM.from_pretrained(flan_ckpt)"
       ],
       "metadata": {
         "id": "vlUSVG3lG3Zt"
@@ -3517,9 +3523,9 @@
     {
       "cell_type": "code",
       "source": [
-        "model_ckpt = 'facebook/bart-base'\n",
-        "bart_tokenizer = AutoTokenizer.from_pretrained(model_ckpt)\n",
-        "bart_model = AutoModelForSeq2SeqLM.from_pretrained(model_ckpt)\n",
+        "bart_ckpt = 'facebook/bart-base'\n",
+        "bart_tokenizer = AutoTokenizer.from_pretrained(bart_ckpt)\n",
+        "bart_model = AutoModelForSeq2SeqLM.from_pretrained(bart_ckpt)\n",
         "save_ckpt = '/content/drive/My Drive/COMP9444/models/BART/'"
       ],
       "metadata": {
@@ -4391,8 +4397,8 @@
     {
       "cell_type": "code",
       "source": [
-        "bart_tokenizer = AutoTokenizer.from_pretrained(model_ckpt)\n",
-        "bart_model = AutoModelForSeq2SeqLM.from_pretrained(model_ckpt)"
+        "bart_tokenizer = AutoTokenizer.from_pretrained(bart_ckpt)\n",
+        "bart_model = AutoModelForSeq2SeqLM.from_pretrained(bart_ckpt)"
       ],
       "metadata": {
         "id": "G3DelNaM6agh"
