--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -1879,7 +1879,7 @@
         "custom_results = pd.DataFrame(custom).T\n",
         "custom_results.columns = ['ROUGE-1', 'ROUGE-2', 'ROUGE-L', 'ROUGE-LSum', 'BLEU']\n",
         "custom_results.index = ['Lite', 'Final']\n",
-        "custom_results"
+        "custom_results[['ROUGE-1', 'ROUGE-2', 'ROUGE-L', 'BLEU']]"
       ],
       "metadata": {
         "colab": {
@@ -2952,7 +2952,7 @@
       "source": [
         "flan_metrics = pd.DataFrame(flan_metrics).T\n",
         "flan_metrics.columns = ['ROUGE-1', 'ROUGE-2', 'ROUGE-L', 'ROUGE-LSum', 'BLEU']\n",
-        "flan_metrics"
+        "flan_metrics[['ROUGE-1', 'ROUGE-2', 'ROUGE-L', 'BLEU']]"
       ],
       "metadata": {
         "id": "azi13g6Au1U6",
@@ -4420,7 +4420,7 @@
       "source": [
         "bart_metrics = pd.DataFrame(bart_metrics).T\n",
         "bart_metrics.columns = ['ROUGE-1', 'ROUGE-2', 'ROUGE-L', 'ROUGE-LSum', 'BLEU']\n",
-        "bart_metrics"
+        "bart_metrics[['ROUGE-1', 'ROUGE-2', 'ROUGE-L', 'BLEU']]"
       ],
       "metadata": {
         "colab": {
@@ -4762,8 +4762,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**COMMENTS ON WHY QUANTITATIVE IS NOT RELIABLE**\n",
-        "\n",
         "#### Qualitative Analysis\n",
         "**Printing Test Set Summaries**"
       ],
@@ -4970,6 +4968,39 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Experiment and Results\n",
+        "\n",
+        "### Experimental Setup\n",
+        "\n",
+        "In this experiment, we utilized substantial computational resources to train large and deep neural networks with millions of trainable parameters. Specifically, we leveraged the capabilities of Google Colab's V100 GPU (16GB) and high RAM (51 GB). This setup was crucial to facilitate and accelerate our experimental processes.\n",
+        "\n",
+        "### Performance Metrics\n",
+        "\n",
+        "Selecting appropriate metrics for evaluation is critical, especially for a task as complex as summarization. Given the rapid advancements in summarization research, several metrics are available:\n",
+        "\n",
+        "#### ROUGE\n",
+        "**Recall-Oriented Understudy for Gisting Evaluation (ROUGE)** is a widely recognized method for evaluating text-to-text generation tasks like Machine Translation and Summarization. Among the various ROUGE metrics, we focus on:\n",
+        "- **ROUGE-1**: This measures the overlap of unigrams (single words) between the system-generated and reference summaries. It is calculated as follows:\n",
+        "  $$ \\text{ROUGE-1} = \\frac{\\sum_{s \\in \\text{System Summaries}} \\sum_{w \\in s} \\text{Count}_{\\text{match}}(w)}{\\sum_{s \\in \\text{Reference Summaries}} \\sum_{w \\in s} \\text{Count}(w)} $$\n",
+        "- **ROUGE-2**: This metric evaluates the overlap of bigrams between the system and reference summaries.\n",
+        "- **ROUGE-L**: This is based on the Longest Common Subsequence (LCS). It considers sentence-level structural similarity by identifying the longest co-occurring sequence of n-grams. The formula for ROUGE-L is:\n",
+        "  $$ \\text{ROUGE-L} = \\frac{\\sum_{l \\in \\text{LCS}} \\text{Length}(l)}{\\text{Length}(\\text{Reference Summary})} $$\n",
+        "\n",
+        "#### BLEU Score\n",
+        "Though primarily used in Machine Translation, the **BLEU Score** complements ROUGE by addressing its limitations. BLEU evaluates the quality of machine-generated text by calculating the precision of n-grams.\n",
+        "\n",
+        "#### Human Evaluation\n",
+        "Despite the efficacy of ROUGE and BLEU in quantitative evaluation, they rely on token or sentence overlap, which might not fully capture the nuances of abstractive summarization. Therefore, we also conducted human evaluations to assess the accuracy and coherence of the generated summaries.\n",
+        "\n",
+        "### Results"
+      ],
+      "metadata": {
+        "id": "DrKmItoDofL8"
+      }
     }
   ],
   "metadata": {
